log
Thu 25 Apr 2024 01:30:19 AM UTC: 
 hashmap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  1|5
total_score: 10/70
0748c30
Thu 25 Apr 2024 01:37:10 AM UTC: 
 hashmap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:72: error: comparison between pointer and integer [-Werror]
   45 |   if ((map->buckets[position] == NULL) || (map->buckets[position]->key == -1)){
      |                                                                        ^~
cc1: all warnings being treated as errors
Compilation failed
361af0d
Thu 25 Apr 2024 01:37:30 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
8966403
Thu 25 Apr 2024 01:46:42 AM UTC: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  3|5
total_score: 20/70
97585c5
Thu 25 Apr 2024 01:47:09 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|5
total_score: 20/70
43fdf2f
Thu 25 Apr 2024 01:52:19 AM UTC: 
 hashmap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:83:67: error: ‘*map->buckets’ is a pointer; did you mean to use ‘->’?
   83 |   if (map == NULL || map->buckets == NULL || is_equal(map->buckets->key,key)) return;
      |                                                                   ^~
      |                                                                   ->
Compilation failed
8323107
